// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> Snapshots and structure should render story 'DefaultSlider' 1`] = `
<div
  className="lumx-slider lumx-slider--theme-light lumx-slider--has-label"
  onMouseDown={[Function]}
>
  <InputLabel
    className="lumx-slider__label"
    htmlFor="slider-uid"
    id="label-slider-uid"
    theme="light"
  >
    Default
  </InputLabel>
  <div
    className="lumx-slider__ui-wrapper"
  >
    <span
      className="lumx-slider__value-label lumx-slider__value-label--min"
    >
      0
    </span>
    <div
      className="lumx-slider__wrapper"
    >
      <div
        className="lumx-slider__track lumx-slider__track--background"
      />
      <div
        className="lumx-slider__track lumx-slider__track--active"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <button
        aria-labelledby="label-slider-uid"
        className="lumx-slider__handle"
        id="slider-uid"
        onKeyDown={[Function]}
        style={
          Object {
            "left": "50%",
          }
        }
        type="button"
      />
    </div>
    <span
      className="lumx-slider__value-label lumx-slider__value-label--max"
    >
      10
    </span>
  </div>
</div>
`;

exports[`<Slider> Snapshots and structure should render story 'WithHelperSlider' 1`] = `
<div
  className="lumx-slider lumx-slider--theme-light lumx-slider--has-label"
  onMouseDown={[Function]}
>
  <InputLabel
    className="lumx-slider__label"
    htmlFor="slider-uid"
    id="label-slider-uid"
    theme="light"
  >
    Default
  </InputLabel>
  <InputHelper
    className="lumx-slider__helper"
    kind="info"
    theme="light"
  >
    This is an helper text
  </InputHelper>
  <div
    className="lumx-slider__ui-wrapper"
  >
    <span
      className="lumx-slider__value-label lumx-slider__value-label--min"
    >
      0
    </span>
    <div
      className="lumx-slider__wrapper"
    >
      <div
        className="lumx-slider__track lumx-slider__track--background"
      />
      <div
        className="lumx-slider__track lumx-slider__track--active"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <button
        aria-labelledby="label-slider-uid"
        className="lumx-slider__handle"
        id="slider-uid"
        onKeyDown={[Function]}
        style={
          Object {
            "left": "50%",
          }
        }
        type="button"
      />
    </div>
    <span
      className="lumx-slider__value-label lumx-slider__value-label--max"
    >
      10
    </span>
  </div>
</div>
`;
